[B]Retrospect v5.0.5 - Changelog - 2019-09-10[/B]

Another small update to fix some channel related issues and update some translations.

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: Use Dash for VRT.nu live streams and show subtitles (Fixes #1223)
* Fixed: VTM.be did not parse all folders (Fixes #1222) Bas Rieter 11-9-2019 23:43