@@ -1,8 +1,9 @@
 ﻿﻿[B]Changelog[/B]
-* Fixed: listing of SVT shows did not work (Fixes #1217)
-* Fixed: invalid expire dates for OA items in SVT Play and set Geo protected warning (Fixes #1220)
+* Fixed: UR Play updated their site and broke Retrospect (Fixes #1226)
 
 [I]Previous changes[/I]
+* Fixed: listing of SVT shows did not work (Fixes #1217)
+* Fixed: invalid expire dates for OA items in SVT Play and set Geo protected warning (Fixes #1220)
 * Fixed: Swedish TV4, Sjuan and TV12 did not show subtitles (Fixes #1188)
 * Changed: restructured the TV4 Play main list a bit (Fixes #1193)
 * Added: Duration and Expire Date to SVT
