@@ -9,5 +9,6 @@ Another small update to fix some channel related issues and update some translat
 -
 
 [B]Channel related[/B]
+* Fixed: UR Play updated their site and broke Retrospect (Fixes #1226)
 * Fixed: Use Dash for VRT.nu live streams and show subtitles (Fixes #1223)
 * Fixed: VTM.be did not parse all folders (Fixes #1222) Bas Rieter 11-9-2019 23:43
